--- a/config/crd/bases/networking.sfc.comnets.com_sfcpolicies.yaml
+++ b/config/crd/bases/networking.sfc.comnets.com_sfcpolicies.yaml
@@ -40,19 +40,10 @@ spec:
             description: SFCPolicySpec defines the desired state of SFCPolicy.
             properties:
               applyChain:
+                description: Match      TrafficMatch `json:"match"`
                 type: string
-              match:
-                properties:
-                  dstPort:
-                    type: integer
-                  ipProto:
-                    type: integer
-                  srcIp:
-                    type: string
-                type: object
             required:
             - applyChain
-            - match
             type: object
           status:
             description: SFCPolicyStatus defines the observed state of SFCPolicy.
