--- a/config/samples/networking_v1alpha1_sfcpolicy.yaml
+++ b/config/samples/networking_v1alpha1_sfcpolicy.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/name: sfc-k8s-operator
     app.kubernetes.io/managed-by: kustomize
+    sfc.comnets.io/name: sfc-policy
   name: sfcpolicy-sample
 spec:
   # match:
