--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -5,4 +5,4 @@ metadata:
     app.kubernetes.io/name: sfc-k8s-operator
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
-  namespace: system
+  namespace: kube-system
