ingress app and svc for sfc

--- a/config/crd/bases/networking.sfc.comnets.com_servicefunctionchains.yaml
+++ b/config/crd/bases/networking.sfc.comnets.com_servicefunctionchains.yaml
@@ -42,7 +42,11 @@ spec:
             properties:
               egressInterface:
                 type: string
-              forwarder:
+              functions:
+                items:
+                  type: string
+                type: array
+              ingress:
                 properties:
                   image:
                     type: string
@@ -151,10 +155,6 @@ spec:
                 required:
                 - image
                 type: object
-              functions:
-                items:
-                  type: string
-                type: array
               ingressInterface:
                 type: string
             required:
