ingress forwading logic in sfc controller

--- a/config/samples/sfc/networking_v1alpha1_servicefunctionchain.yaml
+++ b/config/samples/sfc/networking_v1alpha1_servicefunctionchain.yaml
@@ -18,4 +18,18 @@ spec:
     - servicefunction-sample-2
   ingressInterface: eth0
   egressInterface: eth0
-  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ingress-service
+  namespace: sfc
+spec:
+  clusterIP: 10.96.10.30
+  selector:
+    sfc.comnets.io/name: sfc-service-function-chain  # match your INGRESS pod labels
+  ports:
+  - port: 5000
+    targetPort: 8080
+    nodePort: 30996
+  type: NodePort  # or LoadBalancer if you're using a cloud provider
