--- a/config/samples/service-function/kustomization.yaml
+++ b/config/samples/service-function/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - networking_v1alpha1_servicefunction.yaml
+- servicefunction_svc.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
