--- a/config/samples/service-function/networking_v1alpha1_servicefunction.yaml
+++ b/config/samples/service-function/networking_v1alpha1_servicefunction.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/name: sfc-k8s-operator
     app.kubernetes.io/managed-by: kustomize
     sfc.comnets.io/name: sfc-service-function
+    sfc.comnets.io/sf: sfc-sf-1
   name: servicefunction-sample-1
 spec:
   image: ddocker122/sf1:latest
@@ -15,8 +16,9 @@ spec:
   ports:
     - containerPort: 5000
   nextsf:
-    - name: servicefunction-sample-2
-    - ports: 5000
+    name: servicefunction-sample-2
+    ports:
+      - containerPort: 5000
   nodeSelector:
     # sfc-role: node-a
 ---
@@ -26,6 +28,8 @@ metadata:
   labels:
     app.kubernetes.io/name: sfc-k8s-operator
     app.kubernetes.io/managed-by: kustomize
+    sfc.comnets.io/name: sfc-service-function
+    sfc.comnets.io/sf: sfc-sf-2
   name: servicefunction-sample-2
 spec:
   image: ddocker122/dog_breed:latest
@@ -35,6 +39,7 @@ spec:
       memory: "256Mi"
   ports:
     - containerPort: 5000
+  nextsf:
   nodeSelector:
     # sfc-role: node-b
 
