update labels to hostsf and chain logics tested

--- a/config/crd/bases/networking.sfc.comnets.com_servicefunctions.yaml
+++ b/config/crd/bases/networking.sfc.comnets.com_servicefunctions.yaml
@@ -43,6 +43,10 @@ spec:
                 properties:
                   image:
                     type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    type: object
                   name:
                     type: string
                   ports:
