--- a/config/samples/service-function/kustomization.yaml
+++ b/config/samples/service-function/kustomization.yaml
@@ -2,4 +2,5 @@
 resources:
 - networking_v1alpha1_servicefunction.yaml
 - servicefunction_svc.yaml
+- destination_app.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
