--- a/config/samples/service-function/networking_v1alpha1_servicefunction.yaml
+++ b/config/samples/service-function/networking_v1alpha1_servicefunction.yaml
@@ -16,6 +16,8 @@ spec:
   ports:
     - containerPort: 5000
   hostsf:
+    labels:
+      app: sfc-sf-1
     name: user-defined-sf-1
     image: ddocker122/app:latest
     ports:
@@ -45,12 +47,14 @@ spec:
   ports:
     - containerPort: 5000
   hostsf:
+    labels:
+      app: sfc-sf-2
     name: user-defined-sf-2
     image: ddocker122/app:latest
     ports:
       - containerPort: 5000
   nextsf:
-    # name: servicefunction-sample-2
+    name: destination-app
     # ports:
     #   - containerPort: 5000
   nodeSelector:
